# gc-c-minsk

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt
include/: IncludeMe.h
include/common/: Hashing.h  List.h  Nullable.h  Object.h  VariableStore.h
include/minsk/CodeAnalysis/: Compilation.h  Diagnostic.h  DiagnosticBag.h  EvaluationResult.h  Evaluator.h  ExpressionSyntax.h  LiteralExpressionSyntax.h  SyntaxKind.h  SyntaxNode.h  SyntaxTree.h  TextSpan.h  UnaryExpressionSyntax.h  VariableStore.h  VariableSymbol.h
include/minsk/CodeAnalysis/Binding/: BoundNode.h
include/minsk/CodeAnalysis/Syntax/: AssignmentExpressionSyntax.h  BinaryExpressionSyntax.h  BlockStatementSyntax.h  CompilationUnitSyntax.h  ElseClauseSyntax.h  ExpressionStatementSyntax.h  ExpressionSyntax.h  ForStatementSyntax.h  IfStatementSyntax.h  LiteralExpressionSyntax.h  NameExpressionSyntax.h  ParenthesizedExpressionSyntax.h  StatementSyntax.h  SyntaxFacts.h  SyntaxKind.h  SyntaxNode.h  SyntaxToken.h  SyntaxTree.h  UnaryExpressionSyntax.h  VariableDeclarationSyntax.h  WhileStatementSyntax.h
include/minsk/CodeAnalysis/Text/: SourceText.h  TextLine.h  TextSpan.h
source/: CMakeLists.txt
source/common/: CMakeLists.txt  Hashing.c  Object.c  VariableStore.c
source/mc/: CMakeLists.txt  Main.c
source/minsk/: BinaryExpressionSyntax.c  BinaryExpressionSyntax.h  CMakeLists.txt  Evaluator.c  Evaluator.h  ExpressionSyntax.c  ExpressionSyntax.h  Lexer.c  Lexer.h  List.h  Main.c  NumberExpressionSyntax.c  NumberExpressionSyntax.h  Object.c  Object.h  ParenthesizedExpressionSyntax.c  ParenthesizedExpressionSyntax.h  Parser.c  Parser.h  StringUtils.c  StringUtils.h  SyntaxKind.h  SyntaxNode.c  SyntaxNode.h  SyntaxToken.c  SyntaxToken.h  SyntaxTree.c  SyntaxTree.h  main.c
source/minsk/CodeAnalysis/: BinaryExpressionSyntax.c  Compilation.c  Compilation.h  Diagnostic.c  DiagnosticBag.c  EvaluationResult.c  Evaluator.c  Evaluator.h  ExpressionSyntax.c  Lexer.c  Lexer.h  LiteralExpressionSyntax.c  NumberExpressionSyntax.c  ParenthesizedExpressionSyntax.c  Parser.c  Parser.h  SyntaxFacts.c  SyntaxFacts.h  SyntaxKind.c  SyntaxNode.c  SyntaxToken.c  SyntaxTree.c  SyntaxTree.h  TextSpan.c  UnaryExpressionSyntax.c  VariableStore.c  VariableSymbol.c
source/minsk/CodeAnalysis/Binding/: Binder.c  Binder.h  BoundAssignmentExpression.c  BoundAssignmentExpression.h  BoundBinaryExpression.c  BoundBinaryExpression.h  BoundBinaryOperator.c  BoundBinaryOperator.h  BoundBinaryOperatorKind.c  BoundBinaryOperatorKind.h  BoundBlockStatement.c  BoundBlockStatement.h  BoundExpression.c  BoundExpression.h  BoundExpressionStatement.c  BoundExpressionStatement.h  BoundForStatement.c  BoundForStatement.h  BoundGlobalScope.c  BoundGlobalScope.h  BoundIfStatement.c  BoundIfStatement.h  BoundLiteralExpression.c  BoundLiteralExpression.h  BoundNode.c  BoundNode.h  BoundScope.c  BoundScope.h  BoundStatement.c  BoundStatement.h  BoundTreeRewriter.c  BoundUnaryExpression.c  BoundUnaryExpression.h  BoundUnaryOperator.c  BoundUnaryOperator.h  BoundUnaryOperatorKind.c  BoundUnaryOperatorKind.h  BoundVariableDeclaration.c  BoundVariableDeclaration.h  BoundVariableExpression.c  (+3 more)
source/minsk/CodeAnalysis/Lowering/: Lowerer.c
source/minsk/CodeAnalysis/Syntax/: AssignmentExpressionSyntax.c  BinaryExpressionSyntax.c  BlockStatementSyntax.c  CompilationUnitSyntax.c  ElseClauseSyntax.c  ExpressionStatementSyntax.c  ExpressionSyntax.c  ForStatementSyntax.c  IfStatementSyntax.c  Lexer.c  Lexer.h  LiteralExpressionSyntax.c  NameExpressionSyntax.c  ParenthesizedExpressionSyntax.c  Parser.c  Parser.h  StatementSyntax.c  SyntaxFacts.c  SyntaxFacts.h  SyntaxKind.c  SyntaxNode.c  SyntaxToken.c  SyntaxTree.c  UnaryExpressionSyntax.c  VariableDeclarationSyntax.c  WhileStatementSyntax.c
source/minsk/CodeAnalysis/Text/: SourceText.c  TextLine.c  TextSpan.c
source/minsk/include/minsk-private/CodeAnalysis/: Evaluator.h
source/minsk/include/minsk-private/CodeAnalysis/Binding/: BoundAssignmentExpression.h  BoundBinaryExpression.h  BoundBinaryOperator.h  BoundBinaryOperatorKind.h  BoundForStatement.h  BoundGlobalScope.h  BoundLiteralExpression.h  BoundNode.h  BoundScope.h  BoundStatement.h  BoundTreeRewriter.h  BoundUnaryExpression.h  BoundVariableDeclaration.h  BoundVariableExpression.h  BoundWhileStatement.h
source/minsk/include/minsk-private/CodeAnalysis/Lowering/: Lowerer.h
source/sds/: CMakeLists.txt  sds.c  sds.h  sdsalloc.h  testhelp.h
source/tests/: CMakeLists.txt  TestLexer.c
source/tests/CodeAnalysis/: AnnotatedText.hpp  EvaluatorTests.cpp
source/tests/CodeAnalysis/Syntax/: AssertingEnumerator.hpp  EvaluatorTests.cpp  LexerTests.cpp  ParserTests.cpp  SyntaxFactsTests.cpp
source/tests/CodeAnalysis/Text/: SourceTextTests.cpp
