add_library(
  minsk SHARED
  CodeAnalysis/Compilation.c
  CodeAnalysis/Diagnostic.c
  CodeAnalysis/DiagnosticBag.c
  CodeAnalysis/EvaluationResult.c
  CodeAnalysis/Evaluator.c
  CodeAnalysis/VariableStore.c
  CodeAnalysis/VariableSymbol.c
  CodeAnalysis/Binding/Binder.c
  CodeAnalysis/Binding/BoundAssignmentExpression.c
  CodeAnalysis/Binding/BoundBinaryExpression.c
  CodeAnalysis/Binding/BoundBinaryOperator.c
  CodeAnalysis/Binding/BoundBlockStatement.c
  CodeAnalysis/Binding/BoundExpression.c
  CodeAnalysis/Binding/BoundExpressionStatement.c
  CodeAnalysis/Binding/BoundGlobalScope.c
  CodeAnalysis/Binding/BoundIfStatement.c
  CodeAnalysis/Binding/BoundLiteralExpression.c
  CodeAnalysis/Binding/BoundNode.c
  CodeAnalysis/Binding/BoundScope.c
  CodeAnalysis/Binding/BoundStatement.c
  CodeAnalysis/Binding/BoundUnaryExpression.c
  CodeAnalysis/Binding/BoundUnaryOperator.c
  CodeAnalysis/Binding/BoundVariableDeclaration.c
  CodeAnalysis/Binding/BoundVariableExpression.c
  CodeAnalysis/Binding/BoundWhileStatement.c
  CodeAnalysis/Syntax/AssignmentExpressionSyntax.c
  CodeAnalysis/Syntax/BinaryExpressionSyntax.c
  CodeAnalysis/Syntax/BlockStatementSyntax.c
  CodeAnalysis/Syntax/CompilationUnitSyntax.c
  CodeAnalysis/Syntax/ElseClauseSyntax.c
  CodeAnalysis/Syntax/ExpressionStatementSyntax.c
  CodeAnalysis/Syntax/ExpressionSyntax.c
  CodeAnalysis/Syntax/IfStatementSyntax.c
  CodeAnalysis/Syntax/Lexer.c
  CodeAnalysis/Syntax/LiteralExpressionSyntax.c
  CodeAnalysis/Syntax/NameExpressionSyntax.c
  CodeAnalysis/Syntax/ParenthesizedExpressionSyntax.c
  CodeAnalysis/Syntax/Parser.c
  CodeAnalysis/Syntax/StatementSyntax.c
  CodeAnalysis/Syntax/SyntaxFacts.c
  CodeAnalysis/Syntax/SyntaxKind.c
  CodeAnalysis/Syntax/SyntaxNode.c
  CodeAnalysis/Syntax/SyntaxToken.c
  CodeAnalysis/Syntax/SyntaxTree.c
  CodeAnalysis/Syntax/UnaryExpressionSyntax.c
  CodeAnalysis/Syntax/VariableDeclarationSyntax.c
  CodeAnalysis/Syntax/WhileStatementSyntax.c
  CodeAnalysis/Text/SourceText.c
  CodeAnalysis/Text/TextLine.c
  CodeAnalysis/Text/TextSpan.c
)
target_link_libraries(minsk PUBLIC ${BDWGC} sds common)
